@startuml Conceptual
title SnackGol - Vista conceptual (entidades principales)

!include theme_snackgol.puml

class Role {
  +id: long
  +name: string
  +permissions: string[*]
}

class User {
  +id: long
  +username: string
  +password: string
  +email: string
  +id_role: long
}

class Client {
  +id: string
  +name: string
  +email: string
  +phone: string
  +user_id: long
}

class Category {
  +id: int
  +name: string
  +description: string
}

class SalesPoint <<planned>> {
  +id: int
  +name: string
  +location: string
  +is_active: bool
}

class Product {
  +id: int
  +name: string
  +description: string
  +price: double
  +stock: int
  +category_id: int
  +sales_point_id: int
  +image_url: string
  +is_active: bool
}

class Cart {
  +id: GUID
  +client_id: string
  +session_token: string
  +total_amount: double
  +created_at: DateTime
  +updated_at: DateTime
}

class CartItem {
  +id: int
  +cart_id: GUID
  +product_id: int
  +quantity: int
  +unit_price: double
  +subtotal: double
}

class Order {
  +order_id: string
  +customer_id: string
  +order_date: DateTime
  +status: string
  +total_gross_amount: double
  +total_net_price: double
}

class OrderLine {
  +lineNum: int
  +orderId: string
  +item: string
  +description: string
  +gross_amount: double
  +net_price: double
  +tax_amount: double
  +quantity: double
}

Role "1" -- "*" User : asigna
User "1" -- "1" Client : credencial de
Client "1" -- "*" Cart : posee
Client "1" -- "*" Order : realiza

Category "1" -- "*" Product : clasifica
SalesPoint "1" -- "*" Product : oferta

Cart "1" -- "*" CartItem : contiene
Product "1" -- "*" CartItem : referenciado por

Order "1" -- "*" OrderLine : contiene
Product "1" -- "*" OrderLine : referenciado por

note bottom of SalesPoint
  Entidad conceptual planeada para puntos de venta
  en el estadio. No implementada aún en el código actual.
end note

@enduml
